--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/levelestapi
 spring.datasource.username=root
 spring.datasource.password=Password
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
