self-signed certificate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
 
-server.port = 8080
-server.ssl.enabled=false
-server.ssl.key-store-password = password
-server.ssl.key-password = password
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=password
+server.ssl.key-password=password
+server.ssl.key-store-type=JKS
 
-# docker run -e MYSQL_ROOT_PASSWORD=Password -e MYSQL_DATABASE=levelestapi -p 3306:3306 -d mysql:9.2
+# docker run -e MYSQL_ROOT_PASSWORD=Password -e MYSQL_DATABASE=levelestapi -p 3306:3306 -d mysql:8.4
